--- a/manifests/le-environments/apps/environments/database.yml
+++ b/manifests/le-environments/apps/environments/database.yml
@@ -5,12 +5,10 @@ metadata:
   namespace: default
 spec:
   releaseName: environmentsdb
-  targetNamespace: jira
-  storageNamespace: jira
   chart:
     spec:
       chart: postgresql
-      version: 13.3
+      version: 12.5.5
       sourceRef:
         kind: HelmRepository
         name: bitnami
@@ -21,9 +19,7 @@ spec:
       postgresql:
         auth:
           database: environmentsdb
-          existingSecret: jira-database-credentials
-    image:
-      tag: 13.3.0
+          existingSecret: database-credentials
     postgresqlSharedPreloadLibraries: 'pg_stat_statements'
     primary:
       initdb:
@@ -46,4 +42,4 @@ spec:
     metrics:
       enabled: true
       serviceMonitor:
-        enabled: true
+        enabled: false
